src/scss/comments.scss
@import 'common/_functions';
@import 'common/_mixins';
@import 'common/_variables';

.comment-section {
  margin-top: 40px;

  blockquote a[href^="#paragraph-"] {
    border-bottom: none;
  }
}

.comment-respond-option-toggle {
  --focus-offset: -2px;
  display: block;

  span {
    display: grid;
    place-content: center;
    height: 32px;
    width: 32px;
    transition: opacity var(--transition-duration);
  }

  &[aria-checked="false"] {
    span {
      &:not(:hover) {
        opacity: .3;
      }
    }

    .on {
        display: none;
      }
  }

  &[aria-checked="true"] {
    .off {
      display: none;
    }
  }
}

// Theme comments
.fictioneer-respond {
  margin: 16px 0 24px;

  &__must-login {
    color: var(--fg-900);
    font-size: var(--fs-xs);
    text-align: center;

    :is(label, a) {
      font-weight: 600;
      transition: color var(--transition-duration);

      &:hover {
        color: var(--fg-800);
      }
    }
  }

  &__form {
    &.ajax-in-progress {
      pointer-events: none;

      textarea {
        filter: blur(1px);
      }
    }

    textarea {
      display: block;
      background: transparent;
      line-height: 1.4;
      overflow-wrap: break-word;
      padding: 8px;
      min-height: 104px;
      width: 100%;
      box-shadow: none;
      resize: none;
      overflow-y: hidden;
    }

    &-comment {
      background: var(--input-background);
      border: 1px solid var(--input-border-color);
      border-radius: var(--layout-border-radius-small);
      transition: filter var(--transition-duration);
      box-shadow: var(--input-shadow);
    }

    .notice {
      margin-bottom: 8px;
    }

    &-before-form {
      display: flex;
      align-items: center;
      justify-content: space-between;
      flex-wrap: wrap;
      gap: 0 20px;
      margin-bottom: 4px;

      .left {
        flex-grow: 1;
        display: flex;
        align-items: center;
        color: var(--fg-900);
        font-size: 13px;
        height: 32px;
      }

      .right {
        display: flex;
        flex-shrink: 0;
        color: var(--fg-800);
        font-size: 14px;
        margin: 0 -4px;
      }

      .oauth-login-link {
        display: grid;
        place-content: center;
        height: 32px;
        width: 32px;
      }
    }

    &-bottom {
      display: flex;
      flex-wrap: wrap;
      justify-content: space-between;
      flex-direction: column;
      gap: 8px;
      margin-top: 8px;

      @include bp(600px) {
        flex-direction: row;
      }

      &-block {
        @include bp(600px) {
          flex: 1 1 250px;
        }
      }
    }

    &-identity {
      display: flex;
      flex-direction: column;
      gap: 8px;

      input {
        display: block;
        width: 100%;
      }
    }

    &-actions {
      display: flex;
      justify-content: flex-end;
      gap: 8px;
      margin-top: 16px;

      &-wrapper {
        display: flex;
        align-items: center;

        .button {
          &:not(:first-child) {
            margin-left: 8px;
          }
        }
      }
    }
  }

  &__notices {
    display: flex;
    flex-direction: column;
    gap: 1rem;
    font-size: var(--fs-dxs);
    line-height: 1.5;
    margin-top: 1rem;
  }

  &:not(._private) {
    .private-comment-notice {
      display: none;
    }
  }

  .private-comment-notice {
    color: var(--fg-800);
  }

  &__checkbox-label-pair {
    display: flex;
    align-items: center;
    gap: 8px;
    color: var(--fg-700);
    font-size: 13px;
    line-height: 1.3;
    height: 32px;

    @include bp(600px) {
      justify-content: flex-end;

      &:not(:first-child) {
        margin-top: 8px;
      }
    }
  }
}

.fictioneer-comment-toolbar {
  display: flex;
  gap: 4px;
  align-items: center;
  line-height: 1.2;
  padding: 0 4px;
  height: 38px;

  > :is(span, label) {
    cursor: pointer;
    padding: 4px 7px;
    transition: opacity var(--transition-duration);

    @include bp(375px) {
      padding: 4px 8px;
    }

    &:not(:hover) {
      opacity: .3;
    }
  }
}

.fictioneer-comments {
  &.ajax-in-progress .commentlist {
    filter: blur(1px); // Indicate progress
    transition: filter var(--transition-duration);
  }

  > .fictioneer-respond {
    &:last-child {
      margin-bottom: 0;
    }
  }

  &__header {
    margin-bottom: 24px;
  }

  &__title {
    color: var(--fg-600);
    font-size: var(--fs-m);
    line-height: 1;
    text-transform: uppercase;
    padding-bottom: .75rem;
    border-bottom: 2px dashed var(--layout-color-lineart);
  }

  &__notice {
    color: var(--fg-900);
    font-size: 13px;
    padding-top: 8px;
  }

  &__disabled {
    color: var(--fg-900);
    font-size: 13px;
    text-align: center;
    margin-top: 40px;
  }

  &__list {
    margin-top: 40px;
  }

  .load-more-list-item {
    &:not(:first-child) {
      margin-top: 16px;
    }
  }

  .comments-loading-placeholder {
    text-align: center;
    height: get_clamp(34, 39, 320, 1024);

    &:not(:first-child) {
      margin-top: 16px;
    }
  }
}
/* ... */

